# Swimming-idle-game-terminal

./: Cargo.toml  README.md  pseudo.txt
src/: game.rs  main.rs  swimmer.rs
src/data/: swimmer_names.json
src/ui/: display.rs  messages.rs  mod.rs  utils.rs
src/ui/display/: footer.rs  header.rs  mod.rs  swimmers.rs
src/utils/: mod.rs
